--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="@dimen/margin_base_size_60"
     android:background="@color/colorPrimaryMediumLight"
+    tools:ignore="MissingPrefix"
     android:clickable="true">
 
 
@@ -16,6 +17,7 @@
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
         android:layout_height="72dp"
+        tools:layout_height="56dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/phone_background"
@@ -26,16 +28,16 @@
             style="@style/boldText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:paddingBottom="16dp"
             android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
+            android:paddingBottom="16dp"
             android:text="@string/join_sign_in"
             android:textAllCaps="true"
             android:textColor="?popupsCaptionColor"
             android:textSize="@dimen/font_size_16"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/close_dialog_button"
@@ -46,7 +48,7 @@
             android:background="@android:color/transparent"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
             android:tint="@color/colorPrimaryVeryLight"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </RelativeLayout>
 
 
@@ -56,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
         android:layout_below="@id/top_buttons_container"
-        android:background="@color/colorPrimary"/>
+        android:background="@color/colorPrimary" />
 
     <!-- CONTENT CONTAINER -->
 
@@ -79,7 +81,7 @@
             android:alpha="0.5"
             android:background="@drawable/phone_background"
             android:orientation="horizontal"
-            android:tileMode="repeat"/>
+            android:tileMode="repeat" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -99,7 +101,7 @@
                 android:text="@string/login_facebook"
                 android:textAllCaps="false"
                 android:textColor="?white"
-                android:textSize="@dimen/font_size_16"/>
+                android:textSize="@dimen/font_size_16" />
 
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/sign_up_facebook"
@@ -107,7 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login_facebook"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <ScrollView
                 android:layout_width="wrap_content"
@@ -130,13 +132,13 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="3"
-                            android:background="@color/transparent"/>
+                            android:background="@color/transparent" />
 
                         <View
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="1"
-                            android:background="?popupsCaptionColor"/>
+                            android:background="?popupsCaptionColor" />
 
                         <TextView
                             android:id="@+id/or_label"
@@ -146,74 +148,80 @@
                             android:gravity="center"
                             android:text="@string/or"
                             android:textAllCaps="true"
-                            android:textColor="?popupsCaptionColor"/>
+                            android:textColor="?popupsCaptionColor" />
 
                         <View
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="1"
-                            android:background="?popupsCaptionColor"/>
+                            android:background="?popupsCaptionColor" />
 
                         <View
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="3"
-                            android:background="@color/transparent"/>
+                            android:background="@color/transparent" />
                     </LinearLayout>
 
                     <EditText
                         android:id="@+id/sign_up_firstname"
                         style="@style/edit_text_login_phone"
+                        fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/first_name"
-                        android:inputType="text"
-                        android:textSize="@dimen/font_size_12"/>
+                        android:inputType="textCapWords"
+                        android:textColorHint="#a1ffffff"/>
 
                     <EditText
                         android:id="@+id/sign_up_lastname"
                         style="@style/edit_text_login_phone"
+                        fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/last_name"
-                        android:inputType="text"
-                        android:textSize="@dimen/font_size_12"/>
+                        android:inputType="textCapWords"
+                        android:textColorHint="#a1ffffff"/>
 
                     <EditText
                         android:id="@+id/sign_up_display_name"
                         style="@style/edit_text_login_phone"
+                        fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/nickname"
                         android:inputType="text"
-                        android:textSize="@dimen/font_size_12"/>
+                        android:textColorHint="#a1ffffff"/>
 
                     <EditText
                         android:id="@+id/sign_up_email"
                         style="@style/edit_text_login_phone"
+                        fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/email"
                         android:inputType="text"
-                        android:textSize="@dimen/font_size_12"/>
+                        android:textColorHint="#a1ffffff"/>
 
                     <EditText
                         android:id="@+id/sign_up_phone"
                         style="@style/edit_text_login_phone"
+                        fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/phone"
                         android:inputType="phone"
-                        android:textSize="@dimen/font_size_12"/>
+                        android:textColorHint="#a1ffffff"/>
 
                     <EditText
                         android:id="@+id/sign_up_password"
                         style="@style/edit_text_login_phone"
+                        fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/password"
                         android:inputType="textPassword"
-                        android:textSize="@dimen/font_size_12"/>
+                        android:textColorHint="#a1ffffff"/>
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
@@ -234,16 +242,16 @@
                 android:layout_centerInParent="true"
                 android:text="@string/join"
                 android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size_18"/>
+                android:textSize="@dimen/font_size_18" />
 
             <ProgressBar
-                android:theme="@style/AppTheme.BlackAccent"
                 android:id="@+id/sign_up_progress_bar"
                 android:layout_width="@dimen/prodgres_bar"
                 android:layout_height="@dimen/prodgres_bar"
                 android:layout_centerInParent="true"
                 android:elevation="@dimen/elevation_2"
-                android:visibility="gone"/>
+                android:theme="@style/AppTheme.BlackAccent"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
@@ -259,7 +267,7 @@
             android:text="@string/sign_up_text"
             android:textAlignment="center"
             android:textColor="?white_semitransparent"
-            android:textSize="@dimen/font_size_10"/>
+            android:textSize="@dimen/font_size_10" />
     </RelativeLayout>
 
 
@@ -269,8 +277,7 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:background="@color/colorPrimary"
-        android:visibility="invisible"
-        >
+        android:visibility="gone">
 
 
         <WebView
@@ -278,32 +285,32 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
 
         <ProgressBar
-        style="?android:attr/progressBarStyle"
             android:id="@+id/progress_bar_veb_view"
+            style="?android:attr/progressBarStyle"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
     </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/loadingOverlay"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#c2000000">
+        android:background="#c2000000"
+        android:visibility="gone">
 
         <ProgressBar
             style="?android:attr/progressBarStyle"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
 
     </FrameLayout>
 
