--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -141,13 +141,16 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/height_1"
                         android:layout_weight="1"
-                        android:textColor="?popupsCaptionColor" />
+                        android:alpha="0.15"
+                        android:background="?popupsCaptionColor" />
 
                     <TextView
                         android:id="@+id/or_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:alpha="0.5"
                         android:gravity="center"
                         android:text="@string/or"
                         android:textAllCaps="true"
@@ -157,7 +160,8 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/height_1"
                         android:layout_weight="1"
-                        android:textColor="?popupsCaptionColor" />
+                        android:alpha="0.15"
+                        android:background="?popupsCaptionColor" />
 
                     <View
                         android:layout_width="0dp"
