--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:layout_marginTop="@dimen/margin_base_size_60"
     android:background="@color/colorPrimaryMediumLight"
-    tools:ignore="MissingPrefix"
-    android:clickable="true">
+    android:clickable="true"
+    tools:ignore="MissingPrefix">
 
 
     <!-- TOP BUTTONS CONTAINER -->
@@ -17,12 +17,12 @@
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        tools:layout_height="56dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/phone_background"
         android:orientation="horizontal"
-        android:tileMode="repeat">
+        android:tileMode="repeat"
+        tools:layout_height="56dp">
 
         <TextView
             style="@style/boldText"
@@ -90,7 +90,7 @@
             android:layout_centerInParent="true"
             android:layout_marginEnd="@dimen/margin_40"
             android:layout_marginStart="@dimen/margin_40"
-            android:layout_marginTop="@dimen/margin_40"
+            android:layout_marginTop="16dp"
             android:orientation="vertical">
 
             <Button
@@ -124,7 +124,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/margin_10"
-                        android:layout_marginTop="@dimen/margin_15"
+                        android:layout_marginTop="16dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
@@ -138,13 +138,16 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="1"
+                            android:alpha="0.15"
                             android:background="?popupsCaptionColor" />
 
                         <TextView
                             android:id="@+id/or_label"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="2"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginStart="8dp"
+                            android:alpha="0.5"
                             android:gravity="center"
                             android:text="@string/or"
                             android:textAllCaps="true"
@@ -154,6 +157,7 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="1"
+                            android:alpha="0.15"
                             android:background="?popupsCaptionColor" />
 
                         <View
@@ -171,7 +175,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/first_name"
                         android:inputType="textCapWords"
-                        android:textColorHint="#a1ffffff"/>
+                        android:textColorHint="#a1ffffff" />
 
                     <EditText
                         android:id="@+id/sign_up_lastname"
@@ -181,7 +185,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/last_name"
                         android:inputType="textCapWords"
-                        android:textColorHint="#a1ffffff"/>
+                        android:textColorHint="#a1ffffff" />
 
                     <EditText
                         android:id="@+id/sign_up_display_name"
@@ -191,7 +195,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/nickname"
                         android:inputType="text"
-                        android:textColorHint="#a1ffffff"/>
+                        android:textColorHint="#a1ffffff" />
 
                     <EditText
                         android:id="@+id/sign_up_email"
@@ -201,7 +205,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/email"
                         android:inputType="text"
-                        android:textColorHint="#a1ffffff"/>
+                        android:textColorHint="#a1ffffff" />
 
                     <EditText
                         android:id="@+id/sign_up_phone"
@@ -211,17 +215,28 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/phone"
                         android:inputType="phone"
-                        android:textColorHint="#a1ffffff"/>
+                        android:textColorHint="#a1ffffff" />
 
-                    <EditText
-                        android:id="@+id/sign_up_password"
-                        style="@style/edit_text_login_phone"
-                        fontPath="fonts/TitilliumWeb-SemiBold.ttf"
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/passwordInputLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/password"
-                        android:inputType="textPassword"
-                        android:textColorHint="#a1ffffff"/>
+                        android:layout_marginTop="@dimen/margin_10"
+                        app:hintEnabled="false"
+                        tools:hint="@string/password">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/sign_up_password"
+                            style="@style/edit_text_login_phone"
+                            fontPath="fonts/TitilliumWeb-SemiBold.ttf"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:drawablePadding="-48dp"
+                            android:hint="@string/password"
+                            android:inputType="textPassword"
+                            android:textColorHint="#a1ffffff" />
+
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
