--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -87,8 +87,8 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/height_70"
-                    android:layout_height="@dimen/height_70"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
                     android:layout_gravity="center"
                     android:layout_marginBottom="8dp"
                     android:src="@drawable/club_logo" />
@@ -111,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/login_facebook"
                     android:textAllCaps="false"
-                    android:textColor="?white"
+                    android:textColor="#e0e1e6"
                     android:textSize="@dimen/font_size_16" />
 
                 <com.facebook.login.widget.LoginButton
@@ -265,7 +265,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/password_reset"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#293307"
             android:textSize="@dimen/font_size_18"
             android:visibility="visible" />
 
@@ -315,7 +315,7 @@
             android:gravity="center_vertical"
             android:text="@string/join_sign_in"
             android:textAllCaps="true"
-            android:textColor="?popupsCaptionColor"
+            android:textColor="#9ebbbf"
             android:textSize="@dimen/font_size_16" />
 
 
