--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -340,7 +340,7 @@
         <item name="android:textAlignment">center</item>
         <item name="android:gravity">center</item>
         <item name="android:maxLines">1</item>
-        <item name="android:layout_margin">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColorHint">@android:color/white</item>
     </style>
