--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -193,10 +193,12 @@
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/passwordInputLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/margin_30"
                     android:layout_marginStart="@dimen/margin_30"
-                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
                     app:hintEnabled="false"
                     tools:hint="@string/password">
 
@@ -218,74 +220,74 @@
 
                 </android.support.design.widget.TextInputLayout>
 
+                <RelativeLayout
+                    android:id="@+id/bottom_buttons_container_login"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="14dp"
+                    android:layout_height="@dimen/standard_button_height"
+                    android:layout_marginEnd="@dimen/margin_30"
+                    android:layout_marginStart="@dimen/margin_30"
+                    android:background="@drawable/button_login_login"
+                    android:clickable="true"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/login_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="@string/sign_in"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/font_size_18" />
+
+                    <ProgressBar
+                        android:id="@+id/login_progress_bar"
+                        android:layout_width="@dimen/prodgres_bar"
+                        android:layout_height="@dimen/prodgres_bar"
+                        android:layout_centerInParent="true"
+                        android:elevation="@dimen/elevation_2"
+                        android:theme="@style/AppTheme.BlackAccent"
+                        android:visibility="gone"
+                        tools:visibility="gone" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/bottom_buttons_container_reset"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="@dimen/standard_button_height"
+                    android:layout_marginEnd="@dimen/margin_30"
+                    android:layout_marginStart="@dimen/margin_30"
+                    android:background="@drawable/button_login_login"
+                    android:clickable="true"
+                    android:visibility="invisible">
+
+                    <TextView
+                        android:id="@+id/reset_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="@string/password_reset"
+                        android:textColor="#293307"
+                        android:textSize="@dimen/font_size_18"
+                        android:visibility="visible" />
+
+                    <ProgressBar
+                        android:id="@+id/reset_progress_bar"
+                        android:layout_width="@dimen/prodgres_bar"
+                        android:layout_height="@dimen/prodgres_bar"
+                        android:layout_centerInParent="true"
+                        android:elevation="@dimen/elevation_2"
+                        android:theme="@style/AppTheme.BlackAccent"
+                        android:visibility="gone" />
+
+                </RelativeLayout>
+
 
             </LinearLayout>
             <!--Login username and password container-->
         </RelativeLayout>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/bottom_buttons_container_login"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:layout_above="@id/forgot_button"
-        android:layout_marginEnd="@dimen/margin_30"
-        android:layout_marginStart="@dimen/margin_30"
-        android:background="@drawable/button_login_login"
-        android:clickable="true"
-        android:visibility="visible">
-
-        <TextView
-            android:id="@+id/login_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/sign_in"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/font_size_18" />
-
-        <ProgressBar
-            android:id="@+id/login_progress_bar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
-            android:layout_centerInParent="true"
-            android:elevation="@dimen/elevation_2"
-            android:theme="@style/AppTheme.BlackAccent"
-            android:visibility="gone"
-            tools:visibility="gone" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/bottom_buttons_container_reset"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:layout_above="@id/forgot_button"
-        android:layout_marginEnd="@dimen/margin_30"
-        android:layout_marginStart="@dimen/margin_30"
-        android:background="@drawable/button_login_login"
-        android:clickable="true"
-        android:visibility="invisible">
-
-        <TextView
-            android:id="@+id/reset_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/password_reset"
-            android:textColor="#293307"
-            android:textSize="@dimen/font_size_18"
-            android:visibility="visible" />
-
-        <ProgressBar
-            android:id="@+id/reset_progress_bar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
-            android:layout_centerInParent="true"
-            android:elevation="@dimen/elevation_2"
-            android:theme="@style/AppTheme.BlackAccent"
-            android:visibility="gone" />
-
     </RelativeLayout>
 
     <View
