--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -27,14 +27,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/margin_negative_8"
-                android:layout_toEndOf="@+id/close_dialog_button"
+                android:layout_toEndOf="@+id/backButton"
                 android:gravity="center_vertical"
                 android:text="@string/back"
                 android:textColor="?white"
                 android:textSize="@dimen/font_size_18" />
 
             <ImageButton
-                android:id="@+id/close_dialog_button"
+                android:id="@+id/backButton"
                 android:layout_width="@dimen/standard_button_height"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentStart="true"
