--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -35,7 +35,7 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/close_dialog_button"
+                android:id="@+id/backButton"
                 android:layout_width="@dimen/standard_button_height"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentBottom="true"
