--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -40,7 +40,7 @@
             android:textStyle="bold" />
 
         <android.support.v7.widget.AppCompatImageButton
-            android:id="@+id/close_dialog_button"
+            android:id="@+id/backButton"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentStart="true"
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/login_facebook"
                 android:textAllCaps="false"
-                android:textColor="#e0e1e6"
+                android:textColor="@color/white_alpha_70"
                 android:textSize="@dimen/font_size_16" />
 
             <com.facebook.login.widget.LoginButton
@@ -257,7 +257,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/join"
-                android:textColor="#293307"
+                android:textColor="@color/black_alpha_70"
                 android:textSize="@dimen/font_size_18" />
 
             <ProgressBar
