--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -306,16 +306,14 @@
         android:background="@drawable/phone_background"
         android:orientation="horizontal">
 
-        <android.support.v7.widget.AppCompatImageButton
+        <ImageButton
             android:id="@+id/backButton"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@android:color/transparent"
+            android:layout_alignParentBottom="true"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
-            android:tint="@color/colorPrimaryVeryLight"
-            android:visibility="gone" />
+            android:alpha="0.25"/>
 
         <TextView
             style="@style/boldText"
@@ -325,10 +323,8 @@
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
             android:text="@string/sign_in"
-            android:textAllCaps="true"
-            android:textColor="@color/white_alpha_50"
+            android:textColor="@color/white_alpha_70"
             android:textSize="@dimen/font_size_16" />
-
 
     </RelativeLayout>
 
