--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -29,11 +29,6 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <RelativeLayout
-            android:id="@+id/back_button_holder"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
             <ImageButton
                 android:id="@+id/backButton"
                 android:layout_width="@dimen/standard_button_height"
@@ -43,9 +38,9 @@
                 android:adjustViewBounds="true"
                 android:padding="8dp"
                 android:scaleType="centerInside"
+                android:alpha="0.7"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
-        </RelativeLayout>
     </RelativeLayout>
     <!-- TOP BUTTONS CONTAINER -->
     <android.support.v7.widget.CardView
