--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -34,21 +34,18 @@
             android:gravity="center_vertical"
             android:paddingBottom="16dp"
             android:text="@string/join"
-            android:textAllCaps="true"
-            android:textColor="#9ebbbf"
+            android:textColor="@color/white_alpha_70"
             android:textSize="@dimen/font_size_16"
             android:textStyle="bold" />
 
-        <android.support.v7.widget.AppCompatImageButton
+        <ImageButton
             android:id="@+id/backButton"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
-            android:tint="@color/colorPrimaryVeryLight"
-            android:visibility="gone" />
+            android:layout_alignParentBottom="true"
+            android:alpha="0.25"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
     </RelativeLayout>
 
 
@@ -252,6 +249,7 @@
             android:background="@drawable/button_login_login">
 
             <TextView
+                fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                 android:id="@+id/sign_up_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
