--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -85,6 +85,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/image_logo"
                     android:layout_width="56dp"
                     android:layout_height="56dp"
                     android:layout_gravity="center"
@@ -127,6 +128,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/orContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_16"
