close keyboard on click outside of login input fields

--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -78,9 +78,12 @@
             android:visibility="visible">
 
             <LinearLayout
+                android:id="@+id/clickOutsideContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
+                android:clickable="true"
+                android:focusable="false"
                 android:layout_centerHorizontal="true"
                 android:orientation="vertical">
 
